<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:backgroundTint="@color/appcolor"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_detail"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/image2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_productname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="95dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="114dp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/kit1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_detail"
                    />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="147dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="167dp"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/kitprice1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_productname"
                    />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginBottom="29dp"
                    android:text="@string/kitdescription1"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toTopOf="@+id/btnWarenkorb"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_price" />

                <Button
                    android:id="@+id/btnWarenkorb"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/warenkorblegen"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_description" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


    </FrameLayout>
</layout>