<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_item"
        android:layout_width="match_parent"
        android:backgroundTint="@color/appcolor"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_element"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appcolor"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/iv_item"
                android:layout_width="169dp"
                android:layout_height="160dp"
                android:gravity="left"
                android:src="@drawable/image2"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <TextView
                android:id="@+id/tv_productname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_item"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/kit1" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/iv_item"
                app:layout_constraintTop_toBottomOf="@+id/tv_productname"
                tools:text="@string/kitprice1" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/kitdescription1"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.884"
                app:layout_constraintStart_toEndOf="@+id/iv_item"
                app:layout_constraintTop_toBottomOf="@+id/tv_price" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>