<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appcolor"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:backgroundTint="@color/appcolor"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBaseline_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/ivBackIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/represents_the_backicon"
                    android:src="@drawable/backicon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Werkzeug" />

                <ImageView
                    android:id="@+id/ivFilterIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/represents_the_filtericon"
                    android:src="@drawable/filtericon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/ivSearchIcon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivSearchIcon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/represents_the_searchicon"
                    android:src="@drawable/searchicon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="80dp"
            android:name="com.example.abschlussaufgabe.ui.LoginFragment"
            tools:layout="@layout/fragment_login"/>

        <androidx.cardview.widget.CardView
            android:backgroundTint="@color/appcolor"
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">


                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/appcolor"
                    android:id="@+id/cardViewHome"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cardViewWerkzeug"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/ivHome"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/homeicon"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:text="Home"
                            android:textSize="9sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/ivHome"
                            app:layout_constraintStart_toStartOf="@+id/ivHome"
                            app:layout_constraintTop_toBottomOf="@+id/ivHome" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/appcolor"
                    android:id="@+id/cardViewWerkzeug"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cardViewErsatzteile"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cardViewHome"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/ivWerkzeug"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/werkzeug"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:text="Werkzeug"
                            android:textSize="9sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/ivWerkzeug"
                            app:layout_constraintStart_toStartOf="@+id/ivWerkzeug"
                            app:layout_constraintTop_toBottomOf="@+id/ivWerkzeug" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/appcolor"
                    android:id="@+id/cardViewErsatzteile"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cardViewAnleitung"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cardViewWerkzeug"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/ivErsatzteile"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/ersatzteile"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:text="Ersatzteile"
                            android:textSize="9sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/ivErsatzteile"
                            app:layout_constraintStart_toStartOf="@+id/ivErsatzteile"
                            app:layout_constraintTop_toBottomOf="@+id/ivErsatzteile" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/appcolor"
                    android:id="@+id/cardViewAnleitung"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cardViewWerkstatt"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cardViewErsatzteile"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/ivAnleitung"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/anleitung"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:text="Anleitung"
                            android:textSize="9sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/ivAnleitung"
                            app:layout_constraintStart_toStartOf="@+id/ivAnleitung"
                            app:layout_constraintTop_toBottomOf="@+id/ivAnleitung" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/appcolor"
                    android:id="@+id/cardViewWerkstatt"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/cardViewAnleitung"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <ImageView
                            android:id="@+id/ivWerkstatt"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/werkstatt"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:text="Werkstatt"
                            android:textSize="9sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/ivWerkstatt"
                            app:layout_constraintStart_toStartOf="@+id/ivWerkstatt"
                            app:layout_constraintTop_toBottomOf="@+id/ivWerkstatt" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>